--- a/SIADS696_Demo.ipynb
+++ b/SIADS696_Demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPu/9KHqXSVKZSc3HJ4V/W2",
+      "authorship_tag": "ABX9TyP7VOh2Qs7tUaPomk0mCkIK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -383,37 +383,94 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vq4NyzxVQBRp",
-        "outputId": "cd7a370d-13dc-43aa-98fc-85ed2176416c"
+        "outputId": "8a9f85b8-85b0-41ef-b50e-e4b0a9e9bb5c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting ucimlrepo\n",
-            "  Downloading ucimlrepo-0.0.7-py3-none-any.whl.metadata (5.5 kB)\n",
+            "Requirement already satisfied: ucimlrepo in /usr/local/lib/python3.11/dist-packages (0.0.7)\n",
             "Requirement already satisfied: pandas>=1.0.0 in /usr/local/lib/python3.11/dist-packages (from ucimlrepo) (2.2.2)\n",
             "Requirement already satisfied: certifi>=2020.12.5 in /usr/local/lib/python3.11/dist-packages (from ucimlrepo) (2025.4.26)\n",
             "Requirement already satisfied: numpy>=1.23.2 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.0.0->ucimlrepo) (2.0.2)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.0.0->ucimlrepo) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.0.0->ucimlrepo) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.0.0->ucimlrepo) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.0->ucimlrepo) (1.17.0)\n",
-            "Downloading ucimlrepo-0.0.7-py3-none-any.whl (8.0 kB)\n",
-            "Installing collected packages: ucimlrepo\n",
-            "Successfully installed ucimlrepo-0.0.7\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.0->ucimlrepo) (1.17.0)\n"
           ]
         }
       ],
       "source": [
         "!pip install ucimlrepo"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install nbstripout"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vpb5VKWySv1v",
+        "outputId": "bd21f556-4b15-41e3-a4b5-3b309019641d"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: nbstripout in /usr/local/lib/python3.11/dist-packages (0.8.1)\n",
+            "Requirement already satisfied: nbformat in /usr/local/lib/python3.11/dist-packages (from nbstripout) (5.10.4)\n",
+            "Requirement already satisfied: fastjsonschema>=2.15 in /usr/local/lib/python3.11/dist-packages (from nbformat->nbstripout) (2.21.1)\n",
+            "Requirement already satisfied: jsonschema>=2.6 in /usr/local/lib/python3.11/dist-packages (from nbformat->nbstripout) (4.23.0)\n",
+            "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in /usr/local/lib/python3.11/dist-packages (from nbformat->nbstripout) (5.7.2)\n",
+            "Requirement already satisfied: traitlets>=5.1 in /usr/local/lib/python3.11/dist-packages (from nbformat->nbstripout) (5.7.1)\n",
+            "Requirement already satisfied: attrs>=22.2.0 in /usr/local/lib/python3.11/dist-packages (from jsonschema>=2.6->nbformat->nbstripout) (25.3.0)\n",
+            "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /usr/local/lib/python3.11/dist-packages (from jsonschema>=2.6->nbformat->nbstripout) (2025.4.1)\n",
+            "Requirement already satisfied: referencing>=0.28.4 in /usr/local/lib/python3.11/dist-packages (from jsonschema>=2.6->nbformat->nbstripout) (0.36.2)\n",
+            "Requirement already satisfied: rpds-py>=0.7.1 in /usr/local/lib/python3.11/dist-packages (from jsonschema>=2.6->nbformat->nbstripout) (0.24.0)\n",
+            "Requirement already satisfied: platformdirs>=2.5 in /usr/local/lib/python3.11/dist-packages (from jupyter-core!=5.0.*,>=4.12->nbformat->nbstripout) (4.3.8)\n",
+            "Requirement already satisfied: typing-extensions>=4.4.0 in /usr/local/lib/python3.11/dist-packages (from referencing>=0.28.4->jsonschema>=2.6->nbformat->nbstripout) (4.13.2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xz2Ykg6SS6JH"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jvU-FKZ2S6OD"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "41TmQ1t6S6VW"
+      },
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -454,7 +511,7 @@
       "metadata": {
         "id": "b97A1pKhYIOZ"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -601,9 +658,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0RDhOV6uX7Fy",
-        "outputId": "9a278912-1f8d-412a-b16e-e38ecb929182"
+        "outputId": "3b85be58-8ab9-4154-ac0f-1b40488e253a"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -767,9 +824,9 @@
           "height": 1000
         },
         "id": "wkxWTKAWX7sE",
-        "outputId": "243f4d04-fde9-4a6f-bf54-cdfdf0759dea"
+        "outputId": "4e6a6022-49f7-4086-fa4b-5838e3c976b7"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +866,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-75815725-7091-4478-a92d-60eabef54081\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-73adf9de-cd7a-4346-b4df-1ae4ad610315\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -942,7 +999,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-75815725-7091-4478-a92d-60eabef54081')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-73adf9de-cd7a-4346-b4df-1ae4ad610315')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -994,12 +1051,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-75815725-7091-4478-a92d-60eabef54081 button.colab-df-convert');\n",
+              "        document.querySelector('#df-73adf9de-cd7a-4346-b4df-1ae4ad610315 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-75815725-7091-4478-a92d-60eabef54081');\n",
+              "        const element = document.querySelector('#df-73adf9de-cd7a-4346-b4df-1ae4ad610315');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1019,8 +1076,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-3404a1ed-9660-4739-a2a3-d60216eab86e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3404a1ed-9660-4739-a2a3-d60216eab86e')\"\n",
+              "    <div id=\"df-c7747859-9e9a-49f1-950b-fd3f2aed95fc\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c7747859-9e9a-49f1-950b-fd3f2aed95fc')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1139,7 +1196,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-3404a1ed-9660-4739-a2a3-d60216eab86e button');\n",
+              "            document.querySelector('#df-c7747859-9e9a-49f1-950b-fd3f2aed95fc button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1187,7 +1244,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-049d7704-6fb0-428a-9273-f43e8db92a85\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7677dd85-fc71-4b7d-867f-758db0024a72\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1308,7 +1365,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-049d7704-6fb0-428a-9273-f43e8db92a85')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7677dd85-fc71-4b7d-867f-758db0024a72')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1360,12 +1417,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-049d7704-6fb0-428a-9273-f43e8db92a85 button.colab-df-convert');\n",
+              "        document.querySelector('#df-7677dd85-fc71-4b7d-867f-758db0024a72 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-049d7704-6fb0-428a-9273-f43e8db92a85');\n",
+              "        const element = document.querySelector('#df-7677dd85-fc71-4b7d-867f-758db0024a72');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1385,8 +1442,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b574b6e0-3a7e-4bf8-aa8c-7933dab47f23\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b574b6e0-3a7e-4bf8-aa8c-7933dab47f23')\"\n",
+              "    <div id=\"df-ab218a98-d2b9-4423-aa21-13b2e6413ab1\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ab218a98-d2b9-4423-aa21-13b2e6413ab1')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1505,7 +1562,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b574b6e0-3a7e-4bf8-aa8c-7933dab47f23 button');\n",
+              "            document.querySelector('#df-ab218a98-d2b9-4423-aa21-13b2e6413ab1 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1556,7 +1613,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-026165a5-e2d7-4f87-b92f-f3b57aaacdbf\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ccacdb63-83f7-421a-a2ee-eec1d522563d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1662,7 +1719,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-026165a5-e2d7-4f87-b92f-f3b57aaacdbf')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ccacdb63-83f7-421a-a2ee-eec1d522563d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1714,12 +1771,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-026165a5-e2d7-4f87-b92f-f3b57aaacdbf button.colab-df-convert');\n",
+              "        document.querySelector('#df-ccacdb63-83f7-421a-a2ee-eec1d522563d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-026165a5-e2d7-4f87-b92f-f3b57aaacdbf');\n",
+              "        const element = document.querySelector('#df-ccacdb63-83f7-421a-a2ee-eec1d522563d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1739,8 +1796,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-669e8353-0335-489e-bd9f-add9298b197c\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-669e8353-0335-489e-bd9f-add9298b197c')\"\n",
+              "    <div id=\"df-be1a878d-408a-4a2a-b63f-11b5f35231f4\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-be1a878d-408a-4a2a-b63f-11b5f35231f4')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1859,7 +1916,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-669e8353-0335-489e-bd9f-add9298b197c button');\n",
+              "            document.querySelector('#df-be1a878d-408a-4a2a-b63f-11b5f35231f4 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -2733,9 +2790,9 @@
           "height": 1000
         },
         "id": "6r9vW1I1X8P_",
-        "outputId": "917a599f-6be6-4c7b-d31e-e655c383f729"
+        "outputId": "0904a43b-cc03-419b-e989-936ed8f610ce"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2933,7 +2990,7 @@
       "metadata": {
         "id": "9dTV_oUNX8xV"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -3052,9 +3109,9 @@
           "height": 1000
         },
         "id": "S15B6he3X9X3",
-        "outputId": "b764df06-ab93-46b1-aeee-8c8c37f99c6f"
+        "outputId": "659c1a20-c6e0-40fa-f495-deb8c7764928"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -3251,9 +3308,9 @@
           "height": 1000
         },
         "id": "gQrHax6iX936",
-        "outputId": "aed5463d-bc79-484a-fba7-5fe5d25d9123"
+        "outputId": "87b7f296-d877-425e-b1d2-399ed0a34790"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3360,9 +3417,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T0OdoEspUECz",
-        "outputId": "83a28ad1-b986-4f85-c178-0e92d7742ee7"
+        "outputId": "5df1200b-4d26-4bda-8c43-fd16cf1c7e37"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
