--- a/siads696_eda.ipynb
+++ b/siads696_eda.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,27 +37,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vq4NyzxVQBRp",
-        "outputId": "a7b0b040-59e7-4087-8142-4e7ab58e84f1"
+        "outputId": "54d2c88b-cb79-4b19-af27-4f76f05b9a36"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: ucimlrepo in /usr/local/lib/python3.11/dist-packages (0.0.7)\n",
+            "Collecting ucimlrepo\n",
+            "  Downloading ucimlrepo-0.0.7-py3-none-any.whl.metadata (5.5 kB)\n",
             "Requirement already satisfied: pandas>=1.0.0 in /usr/local/lib/python3.11/dist-packages (from ucimlrepo) (2.2.2)\n",
             "Requirement already satisfied: certifi>=2020.12.5 in /usr/local/lib/python3.11/dist-packages (from ucimlrepo) (2025.4.26)\n",
             "Requirement already satisfied: numpy>=1.23.2 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.0.0->ucimlrepo) (2.0.2)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.0.0->ucimlrepo) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.0.0->ucimlrepo) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.0.0->ucimlrepo) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.0->ucimlrepo) (1.17.0)\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.0->ucimlrepo) (1.17.0)\n",
+            "Downloading ucimlrepo-0.0.7-py3-none-any.whl (8.0 kB)\n",
+            "Installing collected packages: ucimlrepo\n",
+            "Successfully installed ucimlrepo-0.0.7\n"
           ]
         }
       ],
@@ -103,7 +108,7 @@
       "metadata": {
         "id": "b97A1pKhYIOZ"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -250,9 +255,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0RDhOV6uX7Fy",
-        "outputId": "698f4c0d-9f3b-4dae-a3a3-31a9c98400bf"
+        "outputId": "aa32a6a8-158e-40f7-d3bc-1f171fb3adda"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,9 +421,9 @@
           "height": 1000
         },
         "id": "wkxWTKAWX7sE",
-        "outputId": "c0471cf8-5f9a-418a-fbf3-706e964ad9cd"
+        "outputId": "dfc2b758-6097-4e29-c446-384bedac5ab5"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,7 +463,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-95609bff-96d3-49d4-a9b3-192779b168de\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3ced3244-dd91-4846-902a-a41c6dd6c7f7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -591,7 +596,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-95609bff-96d3-49d4-a9b3-192779b168de')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3ced3244-dd91-4846-902a-a41c6dd6c7f7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -643,12 +648,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-95609bff-96d3-49d4-a9b3-192779b168de button.colab-df-convert');\n",
+              "        document.querySelector('#df-3ced3244-dd91-4846-902a-a41c6dd6c7f7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-95609bff-96d3-49d4-a9b3-192779b168de');\n",
+              "        const element = document.querySelector('#df-3ced3244-dd91-4846-902a-a41c6dd6c7f7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -668,8 +673,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-acc43ad7-daad-47d9-8941-c01dc9d9351a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-acc43ad7-daad-47d9-8941-c01dc9d9351a')\"\n",
+              "    <div id=\"df-08329769-bc3e-4e0c-be57-5282337bf7b0\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-08329769-bc3e-4e0c-be57-5282337bf7b0')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -788,7 +793,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-acc43ad7-daad-47d9-8941-c01dc9d9351a button');\n",
+              "            document.querySelector('#df-08329769-bc3e-4e0c-be57-5282337bf7b0 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -836,7 +841,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-49f7f69c-1fd2-4f06-905f-af9a804e2a6f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9386a702-34fc-4168-b5f5-c49b114ad1d2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -957,7 +962,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-49f7f69c-1fd2-4f06-905f-af9a804e2a6f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9386a702-34fc-4168-b5f5-c49b114ad1d2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1009,12 +1014,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-49f7f69c-1fd2-4f06-905f-af9a804e2a6f button.colab-df-convert');\n",
+              "        document.querySelector('#df-9386a702-34fc-4168-b5f5-c49b114ad1d2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-49f7f69c-1fd2-4f06-905f-af9a804e2a6f');\n",
+              "        const element = document.querySelector('#df-9386a702-34fc-4168-b5f5-c49b114ad1d2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1034,8 +1039,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-35c421d2-7f2b-4a7c-82cd-5a4b052d429e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-35c421d2-7f2b-4a7c-82cd-5a4b052d429e')\"\n",
+              "    <div id=\"df-9d7c396d-f4fc-4c5e-9538-d033b42ab45d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9d7c396d-f4fc-4c5e-9538-d033b42ab45d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1154,7 +1159,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-35c421d2-7f2b-4a7c-82cd-5a4b052d429e button');\n",
+              "            document.querySelector('#df-9d7c396d-f4fc-4c5e-9538-d033b42ab45d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1205,7 +1210,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1a79e2b6-d53c-4eed-95de-da26ee84f8f7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1ddb382f-ec52-4f90-bc81-e7971e22e006\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1311,7 +1316,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1a79e2b6-d53c-4eed-95de-da26ee84f8f7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1ddb382f-ec52-4f90-bc81-e7971e22e006')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1363,12 +1368,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1a79e2b6-d53c-4eed-95de-da26ee84f8f7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1ddb382f-ec52-4f90-bc81-e7971e22e006 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1a79e2b6-d53c-4eed-95de-da26ee84f8f7');\n",
+              "        const element = document.querySelector('#df-1ddb382f-ec52-4f90-bc81-e7971e22e006');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1388,8 +1393,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-0b7248da-6231-4dd9-bea0-785b87fc44e6\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0b7248da-6231-4dd9-bea0-785b87fc44e6')\"\n",
+              "    <div id=\"df-01062e75-3e66-4143-abd9-780634d0d725\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-01062e75-3e66-4143-abd9-780634d0d725')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1508,7 +1513,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-0b7248da-6231-4dd9-bea0-785b87fc44e6 button');\n",
+              "            document.querySelector('#df-01062e75-3e66-4143-abd9-780634d0d725 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -2382,9 +2387,9 @@
           "height": 1000
         },
         "id": "6r9vW1I1X8P_",
-        "outputId": "ef6f1300-bc2d-4612-e622-874f82a23071"
+        "outputId": "add6fc1d-d4e7-4c0f-9dc8-6ff2c9447dcd"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2582,7 +2587,7 @@
       "metadata": {
         "id": "9dTV_oUNX8xV"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -2701,9 +2706,9 @@
           "height": 1000
         },
         "id": "S15B6he3X9X3",
-        "outputId": "9cffab7a-3fad-4749-931b-5ac19449d433"
+        "outputId": "850f01cd-c73d-4fc2-b854-e267f81d0bb7"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -2900,9 +2905,9 @@
           "height": 1000
         },
         "id": "gQrHax6iX936",
-        "outputId": "e299b6d7-ebe5-4861-da7f-8d5b30385fea"
+        "outputId": "47278e71-951a-45ac-af88-4f88fdb1731b"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3009,9 +3014,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T0OdoEspUECz",
-        "outputId": "f49add0b-6db5-41d5-d586-c343f938a261"
+        "outputId": "6f75e768-0974-4e75-a6ef-47071449918c"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
